--- a/package.json
+++ b/package.json
@@ -6,9 +6,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "firebase": "^7.24.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3"
+    "react-intersection-observer": "^8.29.1",
+    "react-parallax": "^3.0.3",
+    "react-scripts": "^3.4.4",
+    "react-scroll": "^1.8.1",
+    "react-slick": "^0.27.12",
+    "react-spring": "^8.0.27",
+    "slick-carousel": "^1.8.1"
   },
   "scripts": {
     "start": "react-scripts start",
